Simplify GitLab sync and progress tracking